# Texas-holdem

./: .gitignore
Poker/: game.py
cpluspoker/: cards.h  main.cpp  run
cpluspoker/kuhn/: kuhn.cpp  kuhn.cpp.bak  readme.md  run
cpp/: CMakeLists.txt  README.md  TRANSLATION_NOTES.md  evaluator.cpp  evaluator.h  game.cpp  game.h  run  test_holdem  texas_holdem
cpp/kuhn/: kuhn.cpp  readme.md
cpp/poker/: game.cpp  hand_eval.cpp  hand_eval.h  main.cpp  notes.md  run
python/: evaluator.py
reference/cpp/: README.md  game.cpp  main.cpp  test  test.cpp  texas_holdem
reference/python/: texas_holdem.py
